// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vueIcon return a console error and does not output icon when data is missing 1`] = `
"<script>
/*
DON'T EDIT THIS FILE
It was auto-generated by \\"iconCompiler\\" script
*/

const GenerateIcon = (size, viewBox, childs) => ({
  props: {
    size: {
      type: String,
      default: size,
    },
    fill: {
      type: String,
      default: 'currentColor',
    },
  },
  render: function (createElement) {
    return createElement(
      'svg',
      {
        attrs: {
          height: this.size,
          width: this.size,
          fill: this.fill,
          viewBox: viewBox
        },
      },
      childs.map(elem => createElement(...elem))
    );
  },
});



export default {}
</script>"
`;

exports[`vueIcon vueIcon create a file with a list of exported icons 1`] = `
"<script>
/*
DON'T EDIT THIS FILE
It was auto-generated by \\"iconCompiler\\" script
*/

const GenerateIcon = (size, viewBox, childs) => ({
  props: {
    size: {
      type: String,
      default: size,
    },
    fill: {
      type: String,
      default: 'currentColor',
    },
  },
  render: function (createElement) {
    return createElement(
      'svg',
      {
        attrs: {
          height: this.size,
          width: this.size,
          fill: this.fill,
          viewBox: viewBox
        },
      },
      childs.map(elem => createElement(...elem))
    );
  },
});



export const MIconArrowArrowTop16 = GenerateIcon('1rem', '0 0 16 16', [
  [
    'path',
    { attrs: {\\"d\\":\\"M42 7H6a2 2 0 00-2 2v27a2 2 0 002 2h10v3h-4.5a1.5 1.5 0 000 3h25a1.5 1.5 0 000-3H32v-3h10a2 2 0 002-2V9a2 2 0 00-2-2zm-1 3v18H7V10zM30 35H7v-5h34v5zm0 6H18v-3h12z\\"} },
  ]
])

export const MIconFullScreen24 = GenerateIcon('1.5rem', '0 0 24 24', [
  [
    'path',
    { attrs: {\\"d\\":\\"M42 7H6a2 2 0 00-2 2v27a2 2 0 002 2h10v3h-4.5a1.5 1.5 0 000 3h25a1.5 1.5 0 000-3H32v-3h10a2 2 0 002-2V9a2 2 0 00-2-2zm-1 3v18H7V10zM30 35H7v-5h34v5zm0 6H18v-3h12z\\"} },
  ]
])

export default {}
</script>"
`;
